--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,7 +4,12 @@ on:
   push:
     branches:
       - main  # Trigger on push to the main branch
-
+  workflow_dispatch:
+    inputs:
+      node-version:
+        description: Choose node version
+        required: true
+        default: '18'
 
 jobs:
   build:
@@ -17,4 +22,4 @@ jobs:
       - name: Set up Node.js environment
         uses: actions/setup-node@v4
         with:
-          node-version: '18.x'
+          node-version: '20'
