--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: Build and Push Node.js Docker Image to JFrog
 on:
   push:
     branches:
-      - main  # Trigger on push to the main branch
+      - main
   workflow_dispatch:
     inputs:
       node-version:
@@ -16,10 +16,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout 🛎️
+        uses: actions/checkout@v4
 
-      - name: Set up Node.js environment
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ inputs.node-version }}
+      - name: Set up Docker Buildx 🐋
+        uses: docker/setup-buildx-action@v3
+
