--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,32 +1,32 @@
-name: oidc-poc
+name: Example Workflow with Concurrency
+
 on:
   push:
     branches:
-      - '*'
-
-permissions:
-  id-token: write
-
-env:
-  ACTIONS_ID_TOKEN_REQUEST_URL: ${{  }}
+      - main
 
 jobs:
-  auth:
-    permissions:
-      contents: read
-      id-token: write
+  build:
     runs-on: ubuntu-latest
+
+    concurrency:
+      group: build-${{ github.ref }}
+      cancel-in-progress: true
+
     steps:
-      - name: Get id token
-          run: |
-            ID_TOKEN=$(curl -sLS -H "User-Agent: actions/oidc-client" -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
-            "${ACTIONS_ID_TOKEN_REQUEST_URL}" | jq .value | tr -d '"')
-            echo "ID_TOKEN=${ID_TOKEN}" >> $GITHUB_ENV
-      - name: Exchange token with access
-          env:
-            ID_TOKEN: ${{env.ID_TOKEN}}
-            JFROG_PLATFORM_URL: https://ua123.jfrog.io
-          run: |
-            ACCESS_TOKEN=$(curl -XPOST -H "Content-Type: application/json" "https://ua123.jfrog.io/access/api/v1/oidc/token" -d "{\"grant_type\": \"urn:ietf:params:oauth:grant-type:token-exchange\", \"subject_token_type\":\"urn:ietf:params:oauth:token-type:id_token\", \"subject_token\": \"${ID_TOKEN}\", \"provider_name\": \"github\"}" | jq .access_token | tr -d '"')
-            echo "ACCESS_TOKEN=${ACCESS_TOKEN}" >> $GITHUB_ENV
-            
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests
+        run: npm test
+
+      - name: Build project
+        run: npm run build
