--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,11 +5,6 @@ on:
     branches:
       - main
   workflow_dispatch:
-    inputs:
-      node-version:
-        description: Choose node version
-        required: true
-        default: '18'
 
 jobs:
   build:
@@ -18,7 +13,6 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx 🐋
-        uses: docker/setup-buildx-action@v3
+      - name: Run reusable workflow
+        uses: uros-simeunovic/vite-cypress/.github/workflows/main.yml@main
 
